Fix beta tag wrong font

--- a/index.css
+++ b/index.css
@@ -969,10 +969,6 @@
     text-align: right;
   }
 
-  .font-\[\'Figtree\:Regular\'\,sans-serif\] {
-    font-family: Figtree\:Regular, sans-serif;
-  }
-
   .text-\[12px\] {
     font-size: 12px;
   }
